--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>ru.michaelshell</groupId>
   <artifactId>first-maven</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <modules>
     <module>database</module>
     <module>service</module>
@@ -21,7 +21,7 @@
     <connection>scm:git:git@github.com:Shell2016/first_maven.git</connection>
     <developerConnection>scm:git:git@github.com:Shell2016/first_maven.git</developerConnection>
     <url>https://github.com/Shell2016/first_maven</url>
-    <tag>first-maven-1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
